# agent-self-improvement

./: .gitignore  CLAUDE.md  Makefile  README.md  STRUCTURE.md  orchestrator.py  plan.md  pyproject.toml  requirements.txt
adapters/: __init__.py  coding.py  finance.py  gsm8k_math.py  prbench.py  spider_sql.py
analysis/: __init__.py  bootstrap.py
contracts/: __init__.py  eventlog.py  schemas.py
core/: __init__.py  adapter.py
correction/: CLAUDE.md  contracts.py  correction.py  distill.py  graph.py  inject.py  judge.py  learner.py  memory.py  on_drift.py  prbench_judge.py  provider.py  repair.py  store.py  teacher.py  tracelift.py
detector/: CLAUDE.md  baseline.py  config.py  detector.py  rolling.py
docs/: CURSOR_SESSION_HANDOFF_2026-07-20.md  FABLE_CONTEXT_2026-07-21.md  FABLE_HANDOFF.md  FINDINGS_CODING.md  FINDINGS_FINANCE.md  FINDINGS_REASONING.md  METHOD_EXPLAINED.md  RSI_MEM_PLAN.md  RSI_MEM_V2_FINANCE.md  STRATEGY_LADDER.md  design.md
fixtures/: FINANCE_LICENSE  coding_subset.json  demo_continuous.jsonl  demo_events.jsonl  finance_manifest.json  generate_mocks.py  gsm8k_subset.json  mock_drift_events.jsonl  mock_events.jsonl  mock_telemetry.jsonl  prbench_corpfin.json  prbench_corpfin_manifest.json  prepare_spider.py  spider_subset.json
harness/: CLAUDE.md  agent.py  evaluator.py  feed.py  runner.py  sandbox.py  spider.py
scripts/: alfworld_band_sweep.py  build_demo_continuous.py  demo.sh  eval_runner.py  finance_baselines.py  finance_eval.py  finance_freeze_splits.py  finance_tracelift.py  freeze_heldout.py  generate_coding_fixture.py  (+19 more)
(+55 files in other folders)
