[project]
name = "agent-self-improvement"
version = "0.2.0"
description = "Drift detection and self-improvement for AI agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openai>=1.0",
    "networkx>=3.0",
]

[tool.setuptools]
packages = ["contracts", "harness", "detector", "correction", "viewer"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["detector/tests", "harness/tests", "correction/tests", "viewer/tests", "tests"]
